--- a/paper/references.bib
+++ b/paper/references.bib
@@ -16,4 +16,25 @@
     number = {43},
     pages = {1686},
     doi = {10.21105/joss.01686},
-  }
+}
+
+@misc{redfin,
+  title = {Real Estate, Homes for Sale, MLS Listings, Agents},
+  author = {{Redfin}},
+  year = {2024},
+  url = {https://www.redfin.com}
+}
+
+@misc{bankrate,
+  title = {What Is the MLS? Multiple Listing Service, Explained},
+  author = {{Bankrate}},
+  year = {2024},
+  url = {https://www.bankrate.com/real-estate/mls-multiple-listing-service/}
+}
+
+@misc{nar,
+  title = {What to Know About the Appraisal Process},
+  author = {{National Association of Realtors}},
+  year = {2024},
+  url = {https://www.nar.realtor/magazine/tools/client-education/handouts-for-buyers/what-to-know-about-the-appraisal-process}
+}
