--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -29,18 +29,23 @@ library(kableExtra)
 library(arrow)
 library(stargazer)
 library(ggpubr)
+library(modelsummary)
 ```
-
 
 # Introduction
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget purus eleifend, vehicula dolor vitae, aliquet nibh. Curabitur ac leo non nunc ultrices dignissim. Phasellus faucibus elit id nulla pretium volutpat. Proin ullamcorper, nulla sit amet tempor faucibus, mi ligula interdum urna, eu condimentum arcu augue nec leo. Curabitur vulputate imperdiet nulla eu finibus. Vivamus sem lectus, commodo in lectus quis, posuere laoreet quam. Etiam nunc libero, faucibus nec porta a, dignissim a nisi. Phasellus laoreet elementum turpis a vestibulum. Quisque in urna varius, lobortis eros eu, blandit sapien. In lobortis orci id nunc facilisis, non tempor nisl ultricies.
+Seattle’s real estate market has experienced significant fluctuations since the start of the millennium. Despite these booms and busts, property prices in Seattle remain among the highest in the United States. Demand has steadily increased, and even during periods of lower demand, the market continues to attract buyers. At current price levels, more potential homebuyers are seeking reliable information to find the best deals. With advancements in technology and the increasing availability of data, tools for assessing property values have become essential. One critical tool is an estimate of a property’s fair value, which can help buyers determine whether they are overpaying or underpaying relative to the market.
 
-Fusce aliquam tempus tincidunt. Nulla viverra non nibh consectetur blandit. Proin malesuada, nunc et accumsan pellentesque, odio felis molestie augue, nec gravida lectus ipsum ut lectus. Donec at malesuada purus. Cras ultrices vitae metus eget aliquet. Aliquam sollicitudin elit placerat, porta mauris in, semper felis. Nulla vestibulum dolor sed tempor efficitur. In bibendum libero ex, in sollicitudin arcu maximus porttitor. Pellentesque ac sapien sit amet magna ornare auctor. In hac habitasse platea dictumst. Cras ut urna dapibus elit mattis aliquam non sed augue. Suspendisse lacinia ornare consectetur.
+This paper focuses on developing an accurate and accessible property valuation model tailored to Seattle’s housing market. The model incorporates current market data to provide fair value estimates for individual properties. The goal is to inform readers about the key factors driving real estate prices in Seattle while empowering them with a tool to make better home-buying decisions. By applying machine learning and statistical techniques, the model aims to ensure accuracy and reflect the intrinsic value of properties rather than merely their market prices.
 
-Donec commodo diam non arcu facilisis, sit amet egestas massa consequat. Vestibulum semper congue libero, eu vestibulum mi cursus sed. Morbi ut justo quis ligula molestie mattis. In luctus, dolor ac posuere pretium, ex ex sollicitudin ligula, a varius libero nisi sed arcu. Nulla et bibendum nunc. Morbi sit amet lorem sit amet lectus bibendum tempus aliquam sit amet lectus. Sed ligula nulla, pulvinar quis ipsum a, condimentum egestas mi. Aenean libero tortor, vehicula vitae velit sit amet, eleifend semper elit. Nam non fringilla nisi. Vivamus quis consequat odio, et consectetur risus. Proin vulputate tristique mauris vitae interdum. Phasellus efficitur dictum nibh, id dictum nisl rutrum et.
+Existing valuation tools, such as Zillow’s “Zestimate” and Redfin’s proprietary estimates, have limitations. These models are often closed-source, leaving potential users unable to access the methodology or even the results without cost. This creates a significant gap in the availability of open, free, and transparent valuation tools. The absence of such tools denies buyers the advantage of comprehensive, unbiased information to assess property values independently. To address this gap, data was collected from Redfin’s semi-public dataset on current Seattle property listings. The analysis was conducted using the R programming language for data cleaning, testing, model creation, and result interpretation.
 
-# Data
+**TO-DO: ** Preliminary findings, significance, estimand
+
+
+The paper is structured as follows: @sec-data introduces the dataset and variables. @sec-model outlines the model design and its significance. @sec-results presents the model’s predictions and actionable insights for buyers. Finally, @sec-discuss explores potential applications of the model in other cities, factors influencing property prices, and the generalizability of the model.
+
+# Data {#sec-data}
 
 ## Overview
 
@@ -74,7 +79,7 @@ For property prices, appraisers typically estimate values based on the prices of
 
 The primary goal of this paper is to estimate the outcome variable, price, using a valuation model. This variable represents the market value of active listings at the time of data collection, focusing exclusively on properties located in Seattle. @fig-out provides insights into the distribution of property prices. Plot A shows that property prices are highly skewed, with a maximum value near \$40,000,000 and several listings exceeding \$5,000,000. To better understand the distribution, Plot B presents the logarithmic transformation of property prices. While the transformed distribution is less extreme, it remains skewed, indicating the presence of properties with exceptionally high valuations in the Seattle real estate market.
 
-```{r fig-out, fig.width=7, fig.height=2.6, fig.cap='Distributions of Property Price and Logarithmic Property Price'}
+```{r fig-out, fig.width=7, fig.height=2.5, fig.cap='Heavily Skewed Property Prices and Skewed Still for Logarithmic Prices'}
 p1 <- data |>
   select(price) |>
   ggplot(aes(x = price)) +
@@ -85,11 +90,10 @@ p2 <- data |>
   select(price) |>
   ggplot(aes(x = log(price))) +
   geom_histogram(binwidth = 0.25, fill = "beige", color = "black") +
-  labs(x = " ln(Price) ($)", y = "Count")
+  labs(x = " ln(Price)", y = "Count")
 
 ggarrange(p1, p2, labels = c("A", "B"))
 ```
-
 
 ## Predictor Variables
 
@@ -103,7 +107,7 @@ ggarrange(p1, p2, labels = c("A", "B"))
 
 @fig-pred1 represents the distributions of property types and number of bedrooms. Plot C shows that single-family homes are the most common, followed closely by condos, with townhouses being the least prevalent. This likely reflects the mix of apartments and houses present in Seattle's real estate market. Plot D highlights that properties with 2 or 3 bedrooms are most frequent, while some properties even have north of 7 bedrooms. This is likely because condos typically feature 1-2 bedrooms, whereas single-family homes and townhouses commonly have 3-4 bedrooms.
 
-```{r fig-pred1, fig.width=7, fig.height=2.6, fig.cap='Distributions of Property Type and Number of Bedrooms'}
+```{r fig-pred1, fig.width=7, fig.height=2.5, fig.cap='Single Family Homes and 2 or 3 Bedrooms Properties Most Listing on the Market'}
 p3 <- data |> 
   ggplot(aes(x = property_type)) +
   geom_bar(fill = "beige", color = "black") +
@@ -120,7 +124,7 @@ ggarrange(p3, p4, labels = c("C", "D"))
 
 @fig-pred2 displays the distributions of property size and age. Plot E shows that property size is positively skewed, with most properties under 2,500 square feet and a peak between 700 and 1,200 square feet. Properties exceeding 5,000 square feet likely represent luxury homes or mansions. Plot F indicates that property age is also positively skewed, with the most common properties being less than 10 years old. The second most common group is 20-30 years old, likely reflecting construction surges before the 2008 financial crisis and real estate market downturn.
 
-```{r fig-pred2, fig.width=7, fig.height=2.6, fig.cap='Distributions of Property Size and Property Age'}
+```{r fig-pred2, fig.width=7, fig.height=2.5, fig.cap='Skewed Distribution of Sizes and Most Properties Built Over the Last Decade'}
 p5 <- data |>
   ggplot(aes(x = sqft)) + 
   geom_histogram(binwidth = 500, fill = "beige", color = "black") +
@@ -134,19 +138,80 @@ p6 <- data |>
 ggarrange(p5, p6, labels = c("E", "F"))
 ```
 
-# Model
+\newpage
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc euismod nisl sollicitudin blandit fermentum. Pellentesque molestie mi augue, a consectetur tellus commodo a. Sed dui lectus, sollicitudin ut sagittis eget, venenatis eget est. Proin neque massa, interdum et laoreet vulputate, cursus vitae mi. Ut scelerisque, dui vitae consequat fringilla, nunc felis pharetra dui, ac condimentum nibh ipsum non tortor. Vivamus dictum volutpat nisl. Quisque ullamcorper erat mi, ac tempus leo efficitur non. Nulla porta id est id tempus. Quisque pulvinar, dolor eget elementum tincidunt, est neque bibendum purus, quis sodales ipsum eros ac turpis.
+# Model {#sec-model}
 
-## Model Setup
+## Overview
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc euismod nisl sollicitudin blandit fermentum. Pellentesque molestie mi augue, a consectetur tellus commodo a. Sed dui lectus, sollicitudin ut sagittis eget, venenatis eget est. Proin neque massa, interdum et laoreet vulputate, cursus vitae mi. Ut scelerisque, dui vitae consequat fringilla, nunc felis pharetra dui, ac condimentum nibh ipsum non tortor. Vivamus dictum volutpat nisl.
+The model uses a multiple linear regression approach to estimate property values in Seattle. It incorporates features like the number of bedrooms (`beds`), square footage (`sqft`), homeowner association fees (`hoa_month`), and an interaction term (`sqft` $\times$ `beds`) to predict prices. These characteristics were selected for their significance in influencing property valuations. The final model was chosen after thorough validation, achieving a good balance of accuracy and interpretability.
 
-## Model Justification
+## Setup
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc euismod nisl sollicitudin blandit fermentum. Pellentesque molestie mi augue, a consectetur tellus commodo a. Sed dui lectus, sollicitudin ut sagittis eget, venenatis eget est. Proin neque massa, interdum et laoreet vulputate, cursus vitae mi. Ut scelerisque, dui vitae consequat fringilla, nunc felis pharetra dui, ac condimentum nibh ipsum non tortor. Vivamus dictum volutpat nisl. Quisque ullamcorper erat mi, ac tempus leo efficitur non. Nulla porta id est id tempus. Quisque pulvinar, dolor eget elementum tincidunt, est neque bibendum purus, quis sodales ipsum eros ac turpis.
+The linear regression model can be represented as:
 
-# Results
+$$
+\text{price} = \beta_0 + \beta_1 \cdot \text{beds} + \beta_2 \cdot \text{sqft} + \beta_3 \cdot \text{hoa\_month} + \beta_4 \cdot (\text{sqft} \cdot \text{beds})
+$$
+
+, where the coefficients are described as:
+
+**$\beta_0$: Intercept** 
+
+The predicted value of `price` when all predictors ($\text{beds}$, $\text{sqft}$, $\text{hoa\_month}$, $\text{sqft} \cdot \text{beds}$) are zero.
+
+**$\beta_1$: Coefficient for `beds`**  
+
+The effect of adding one more bedroom ($\text{beds}$) on `price`, holding other factors constant (except for the interaction term).
+
+**$\beta_2$: Coefficient for `sqft`**  
+
+The effect of increasing square footage ($\text{sqft}$) by one unit on `price`, holding other factors constant (except for the interaction term).
+
+**$\beta_3$: Coefficient for `hoa_month`**  
+
+The effect of a one-unit increase in monthly homeowner's association fees (`hoa_month`) on `price`, holding other factors constant.
+
+**$\beta_4$: Interaction between `sqft` and `beds`**  
+
+Represents how the relationship between $\text{sqft}$ and `price` changes depending on the number of bedrooms ($\text{beds}$).
+
+## Limitations
+
+This model has a few limitations that should be considered when interpreting its predictions. First, it is trained on cross-sectional data rather than longitudinal data. As a result, the model is designed to provide accurate valuations for properties in the near future (typically less than a year), assuming minimal price fluctuations. Significant market changes over time would reduce the model's accuracy, requiring frequent updates with new cross-sectional data to maintain reliability. Additionally, the model is specifically tailored to Seattle’s real estate market. While it might perform adequately in nearby cities with similar market characteristics, it is unlikely to generalize well to cities in other states, such as Los Angeles or New York, due to differing property attributes and pricing dynamics in those regions.
+
+## Justification
+
+The four features included in the model are `beds`, `sqft`, `hoa_month`, and `sqft:beds`, as they were the most significant in influencing the model's property valuations. The beds feature was selected because the number of bedrooms is a key determinant of a property's utility and appeal to buyers, directly impacting its market value. The sqft feature, representing the total square footage, is a fundamental metric for assessing a property's size and, consequently, its worth. The hoa_month feature accounts for monthly homeowner association fees, which can significantly affect the affordability and desirability of properties, particularly in condominiums or communities with shared amenities. Finally, the interaction term sqft:beds captures the relationship between the size of the property and the number of bedrooms, highlighting how the distribution of space impacts valuation.
+
+```{r}
+full_model <- readRDS("../models/full_model.rds")
+reduced_model <- readRDS("../models/reduced_model.rds")
+final_model <- readRDS("../models/final_model.rds")
+```
+
+```{r #tbl-summ}
+modelsummary(list(
+  # "Full" = full_model,
+  # "Reduced" = reduced_model,
+  "Final Model" = final_model), output = "kableExtra",
+  gof_omit = "BIC|AIC") |>
+  column_spec(2, width = "2.5in")
+```
+
+## Interpretation
+
+@tbl-summ shows the values of the model's coefficients mentioned in the setup. The intercept of -341,047.42 suggests that, without any additional predictors, property prices would begin at this negative baseline, though this value has limited standalone interpretation. The coefficient for beds is -159,574.45, meaning that, holding other factors constant, each additional bedroom is associated with a significant reduction in price. However, this effect is modified by the interaction term beds $\times$ sqft, which has a negative coefficient of -32.64, indicating that larger properties with more bedrooms have diminishing price returns. The sqft variable has a strong positive impact (1152.06 per additional square foot), highlighting size as a key driver of value. The hoa_month coefficient (267.83) shows a modest positive association with price, possibly reflecting higher costs in premium communities. With an $R^2$ of 0.654, the model explains 65.4\% of the variance in property prices, and an RMSE of 719,452.71, the summary suggests a decent fit.
+
+## Validation
+
+The linear model was created using base R [@R] to fit the data and generate predictions, while the MLMetrics package [@mlmetrics] was used to evaluate performance. A train-test split of 70:30 was created with the rsample package [@rsample], with the model trained on the larger portion of the data and validated using out-of-sample testing on the remaining data. Key evaluation metrics included the Root Mean Square Error (RMSE) and the $R^2$ score. The model achieved an RMSE of 1,850,720, indicating the average prediction error in dollar terms, and an $R^2$ score of approximately 0.281, reflecting the proportion of variance in property prices explained by the model. Detailed diagnostics and further information are provided in the appendix.
+
+## Alternate Models
+
+Several alternative models were considered before selecting the final one. The first, a “full model,” included all variables in the cleaned dataset, achieving an RMSE of 1,864,966 and an $R^2$ score of 0.269. While this model used all available information, many variables were statistically insignificant. A reduced model was then tested by retaining only significant variables, resulting in an RMSE of 1,865,188 and an $R^2$ score of 0.269. Though concise, it performed similarly to the full model. The final model, incorporating an interaction term, outperformed both alternatives with an RMSE of 1,850,720 and an $R^2$ score of 0.281.
+
+# Results {#sec-results}
 
 ## Result 1
 
@@ -156,7 +221,7 @@ palmerpenguins::penguins |>
   geom_point()
 ```
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis volutpat ut ante vestibulum sagittis. Etiam sollicitudin ligula neque, et sollicitudin erat iaculis eu. Pellentesque aliquam semper sapien, a faucibus nulla consequat vitae. Praesent in vulputate neque. Fusce fermentum tempor turpis, nec iaculis diam porta nec. Maecenas nec porta felis, at tincidunt ex. Mauris convallis tincidunt posuere. Quisque rutrum imperdiet turpis, quis bibendum est ultrices ut. Phasellus in tortor eu ligula pellentesque pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur eleifend ac purus quis dapibus. Ut tincidunt posuere tortor, vitae venenatis nunc placerat eu. Praesent sit amet mi urna. Sed ultrices est et ligula posuere, eget molestie lorem porta. Quisque tempor, dolor porta semper aliquam, urna magna rhoncus sapien, at mattis metus nibh eleifend mi. Sed id bibendum urna, ut tempor ligula. Nulla facilisi. Nulla facilisi.
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse accumsan elementum diam sed ullamcorper. Integer sodales posuere mauris, sit amet blandit tortor scelerisque non. Nulla ut sapien vel orci scelerisque varius malesuada vel lorem. Integer sit amet enim mattis nisi porttitor sodales nec vitae odio. Vivamus eget rutrum erat. Ut dictum quis ligula non euismod. Fusce sit amet egestas nibh. In rutrum tortor sed nulla volutpat facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non sapien lacus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce nec magna nec leo convallis dignissim ut porta justo. Curabitur nec faucibus orci. Sed fringilla elit vel sapien rutrum, ut egestas nisl bibendum. Donec faucibus suscipit enim, porttitor suscipit ex commodo egestas. Morbi eget odio nisi. Curabitur posuere scelerisque libero, non pharetra ex scelerisque.
 
 ## Result 2
 
@@ -168,7 +233,7 @@ palmerpenguins::penguins |>
   coord_flip()
 ```
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis volutpat ut ante vestibulum sagittis. Etiam sollicitudin ligula neque, et sollicitudin erat iaculis eu. Pellentesque aliquam semper sapien, a faucibus nulla consequat vitae. Praesent in vulputate neque. Fusce fermentum tempor turpis, nec iaculis diam porta nec. Maecenas nec porta felis, at tincidunt ex. Mauris convallis tincidunt posuere. Quisque rutrum imperdiet turpis, quis bibendum est ultrices ut. Phasellus in tortor eu ligula pellentesque pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur eleifend ac purus quis dapibus. Ut tincidunt posuere tortor, vitae venenatis nunc placerat eu. Praesent sit amet mi urna. Sed ultrices est et ligula posuere, eget molestie lorem porta. Quisque tempor, dolor porta semper aliquam, urna magna rhoncus sapien, at mattis metus nibh eleifend mi. Sed id bibendum urna, ut tempor ligula. Nulla facilisi. Nulla facilisi.
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse accumsan elementum diam sed ullamcorper. Integer sodales posuere mauris, sit amet blandit tortor scelerisque non. Nulla ut sapien vel orci scelerisque varius malesuada vel lorem. Integer sit amet enim mattis nisi porttitor sodales nec vitae odio. Vivamus eget rutrum erat. Ut dictum quis ligula non euismod. Fusce sit amet egestas nibh. In rutrum tortor sed nulla volutpat facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non sapien lacus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce nec magna nec leo convallis dignissim ut porta justo. Curabitur nec faucibus orci. Sed fringilla elit vel sapien rutrum, ut egestas nisl bibendum. Donec faucibus suscipit enim, porttitor suscipit ex commodo egestas. Morbi eget odio nisi. Curabitur posuere scelerisque libero, non pharetra ex scelerisque.
 
 ## Result 3
 
@@ -181,11 +246,11 @@ palmerpenguins::penguins |>
   coord_flip()
 ```
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis volutpat ut ante vestibulum sagittis. Etiam sollicitudin ligula neque, et sollicitudin erat iaculis eu. Pellentesque aliquam semper sapien, a faucibus nulla consequat vitae. Praesent in vulputate neque. Fusce fermentum tempor turpis, nec iaculis diam porta nec. Maecenas nec porta felis, at tincidunt ex. Mauris convallis tincidunt posuere. Quisque rutrum imperdiet turpis, quis bibendum est ultrices ut. Phasellus in tortor eu ligula pellentesque pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur eleifend ac purus quis dapibus. Ut tincidunt posuere tortor, vitae venenatis nunc placerat eu. Praesent sit amet mi urna. Sed ultrices est et ligula posuere, eget molestie lorem porta. Quisque tempor, dolor porta semper aliquam, urna magna rhoncus sapien, at mattis metus nibh eleifend mi. Sed id bibendum urna, ut tempor ligula. Nulla facilisi. Nulla facilisi. Proin mollis quam ut rutrum vulputate. Praesent commodo.
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse accumsan elementum diam sed ullamcorper. Integer sodales posuere mauris, sit amet blandit tortor scelerisque non. Nulla ut sapien vel orci scelerisque varius malesuada vel lorem. Integer sit amet enim mattis nisi porttitor sodales nec vitae odio. Vivamus eget rutrum erat. Ut dictum quis ligula non euismod. Fusce sit amet egestas nibh. In rutrum tortor sed nulla volutpat facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non sapien lacus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce nec magna nec leo convallis dignissim ut porta justo. Curabitur nec faucibus orci. Sed fringilla elit vel sapien rutrum, ut egestas nisl bibendum. Donec faucibus suscipit enim, porttitor suscipit ex commodo egestas. Morbi eget odio nisi. Curabitur posuere scelerisque libero, non pharetra ex scelerisque.
 
 \newpage
 
-# Discussion
+# Discussion {#sec-discuss}
 
 ## Discussion 1
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget purus eleifend, vehicula dolor vitae, aliquet nibh. Curabitur ac leo non nunc ultrices dignissim. Phasellus faucibus elit id nulla pretium volutpat. Proin ullamcorper, nulla sit amet tempor faucibus, mi ligula interdum urna, eu condimentum arcu augue nec leo. Curabitur vulputate imperdiet nulla eu finibus. Vivamus sem lectus, commodo in lectus quis, posuere laoreet quam. Etiam nunc libero, faucibus nec porta a, dignissim a nisi. Phasellus laoreet elementum turpis a vestibulum. Quisque in urna varius, lobortis eros eu, blandit sapien. In lobortis orci id nunc facilisis, non tempor nisl ultricies. Sed pellentesque tortor cursus ipsum fringilla interdum. Cras lacinia tempor placerat. Proin eu elit elit. Sed molestie dolor et posuere sodales.
@@ -254,6 +319,26 @@ data_dictionary <- data.frame(
 )
 
 kable(data_dictionary, col.names = c("Variable", "Description"), align = "l")
+```
+
+# Additional Model Details
+
+```{r, fig.width=6, fig.height=3}
+par(mfrow = c(1, 2))
+
+plot(fitted(final_model), resid(final_model), main = "Residual-Fitted Plot",
+     xlab="Fitted", ylab = "Residual")
+qqnorm(resid(final_model));qqline(resid(final_model))
+```
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae pretium velit. Etiam fermentum enim ac venenatis fringilla. Nulla imperdiet metus ac ligula ultricies, at cursus eros varius. Curabitur commodo pretium ornare. Pellentesque ultrices sapien ut lectus viverra placerat. Mauris nec interdum tortor. Cras posuere turpis sed mi blandit dictum. Etiam accumsan ipsum quis sem ornare cursus. Aenean ligula mauris, vulputate a volutpat dapibus, consectetur a lacus. Nullam ornare placerat risus, in luctus urna. Ut molestie dignissim turpis, eget tincidunt arcu. Vivamus auctor fermentum lectus, eu vulputate tortor volutpat et. Aenean aliquam nulla eget felis faucibus faucibus ut nec nisi.
+
+```{r}
+modelsummary(list(
+  "Full" = full_model,
+  "Reduced" = reduced_model), 
+  output = "kableExtra") |>
+  column_spec(2, width = "2in")
 ```
 
 \newpage
