--- a/paper/references.bib
+++ b/paper/references.bib
@@ -18,6 +18,22 @@
     doi = {10.21105/joss.01686},
 }
 
+@manual{mlmetrics,
+    title = {MLmetrics: Machine Learning Evaluation Metrics},
+    author = {Yachen Yan},
+    year = {2024},
+    note = {R package version 1.1.3},
+    url = {https://CRAN.R-project.org/package=MLmetrics},
+}
+
+@manual{rsample,
+    title = {rsample: General Resampling Infrastructure},
+    author = {Hannah Frick and Fanny Chow and Max Kuhn and Michael Mahoney and Julia Silge and Hadley Wickham},
+    year = {2024},
+    note = {R package version 1.2.1},
+    url = {https://CRAN.R-project.org/package=rsample},
+}
+
 @misc{redfin,
   title = {Real Estate, Homes for Sale, MLS Listings, Agents},
   author = {{Redfin}},
