Fixing an error in the models

--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -201,7 +201,7 @@ modelsummary(list(
 
 ## Interpretation
 
-@tbl-summ shows the values of the model's coefficients mentioned in the setup. The intercept of -341,047.42 suggests that, without any additional predictors, property prices would begin at this negative baseline, though this value has limited standalone interpretation. The coefficient for beds is -159,574.45, meaning that, holding other factors constant, each additional bedroom is associated with a significant reduction in price. However, this effect is modified by the interaction term beds $\times$ sqft, which has a negative coefficient of -32.64, indicating that larger properties with more bedrooms have diminishing price returns. The sqft variable has a strong positive impact (1152.06 per additional square foot), highlighting size as a key driver of value. The hoa_month coefficient (267.83) shows a modest positive association with price, possibly reflecting higher costs in premium communities. With an $R^2$ of 0.654, the model explains 65.4\% of the variance in property prices, and an RMSE of 719,452.71, the summary suggests a decent fit.
+@tbl-summ shows the values of the model's coefficients mentioned in the setup. The intercept of -341,047.42 suggests that, without any additional predictors, property prices would begin at this negative baseline, though this value has limited standalone interpretation. The coefficient for beds is -159,574.45, meaning that, holding other factors constant, each additional bedroom is associated with a significant reduction in price. However, this effect is modified by the interaction term beds $\times$ sqft, which has a negative coefficient of -32.64, indicating that larger properties with more bedrooms have diminishing price returns. The sqft variable has a strong positive impact (1152.06 per additional square foot), highlighting size as a key driver of value. The hoa_month coefficient (267.83) shows a modest positive association with price, possibly reflecting higher costs in premium communities. With an adjusted $R^2$ of 0.6543, the model explains 65.3\% of the variance in property prices, and an RMSE of 719,452.71, the summary suggests a decent fit.
 
 ## Validation
 
